--- a/style/common.css
+++ b/style/common.css
@@ -1,4 +1,36 @@
+* { margin: 0px; padding: 0px; font-family: tahoma,"microsoft yahei","\5FAE\8F6F\96C5\9ED1"!important; }
+
+a { color: #000; text-decoration: none; }
+ul li { list-style-type: none; }
+
+/*图标引入*/
+.icon {
+    /* 通过设置 font-size 来改变图标大小 */
+    width: 1.2em; height: 1.2em;
+    /* 图标和文字相邻时，垂直对齐 */
+    vertical-align: -0.25em;
+    /* 通过设置 color 来改变 SVG 的颜色/fill */
+    fill: currentColor;
+    /* path 和 stroke 溢出 viewBox 部分在 IE 下会显示 normalize.css 中也包含这行 */
+    overflow: hidden;
+}
+
 /*公共类文件*/
 
 .hover { background-color: #14AAFB; color: white; }
 .hover > a { color: white; }
+
+/* top nav */
+header { width: 100%; height: 46px; border-bottom: 1px solid #14AAFB; }
+header > nav { width: 1200px; height: auto; margin: 0 auto; padding: 0 auto; }
+
+header > nav > div, header > nav > ul, header > nav > ul > li { 
+	float: left;
+	padding: 0px 10px;
+	line-height: 46px;
+}
+
+header > nav > form { float: right; margin-top: 12px; }
+.topsearch > .toptext { width: 150px; height: 22px; }
+
+main { width: 1200px; margin: 0 auto; padding: 0 auto; overflow: hidden; margin-bottom: 120px; }
